--- a/css/modules/_target.scss
+++ b/css/modules/_target.scss
@@ -223,6 +223,7 @@
                 .target__text-box {
                     transform: translate(-40%, 6%);
                     height: auto;
+                    width: 73%;
                 }
             }
         }
