--- a/css/modules/_footer.scss
+++ b/css/modules/_footer.scss
@@ -29,7 +29,7 @@
         font-weight: 500;
 
         @media screen and (max-width: $breakpoint-sp) {
-            font-size: 20px;
+            font-size: 32px;
             margin-bottom: 40px;
         }
     }
@@ -43,7 +43,7 @@
 
         @media screen and (max-width: $breakpoint-sp) {
             flex-direction: column;
-            gap: 50px;
+            gap: 30px;
         }
     }
 
@@ -67,6 +67,10 @@
             /* Fixed width for logo column */
             flex-shrink: 0;
 
+            @media screen and (max-width: $breakpoint-sp) {
+                width: 100%;
+            }
+
             .footer__sub-title {
                 text-align: center;
             }
@@ -78,6 +82,10 @@
         margin-bottom: 20px;
         font-weight: 500;
         letter-spacing: 0.05em;
+
+        @media screen and (max-width: $breakpoint-sp) {
+            font-size: 16px;
+        }
     }
 
     &__place-name {
@@ -86,7 +94,7 @@
         margin-bottom: 20px;
 
         @media screen and (max-width: $breakpoint-sp) {
-            font-size: 20px;
+            font-size: 24px;
         }
     }
 
@@ -95,6 +103,11 @@
         line-height: 1.8;
         font-weight: 500;
         margin-bottom: 20px;
+
+        @media screen and (max-width: $breakpoint-sp) {
+            font-size: 16px;
+            text-align: left;
+        }
     }
 
     &__company-logo {
@@ -103,7 +116,11 @@
         padding: 15px 30px;
         display: inline-block;
         width: 400px;
+
         /* User request: 400px */
+        @media screen and (max-width: $breakpoint-sp) {
+            width: 100%;
+        }
 
         img {
             width: 100%;
