--- a/css/modules/_voice.scss
+++ b/css/modules/_voice.scss
@@ -12,6 +12,7 @@
 
     @media screen and (max-width: $breakpoint-sp) {
         padding-bottom: 60px; // Standardized SP padding
+        overflow: hidden; // Clip breakout items
     }
 
     /* Title Area with Full Width Background */
@@ -30,8 +31,8 @@
         /* Overlap with content below if needed, or adjust padding */
 
         @media screen and (max-width: $breakpoint-sp) {
-            padding-top: 100px;
-            padding-bottom: 150px;
+            padding-top: 50px;
+            padding-bottom: 70px;
             background-size: cover;
         }
     }
@@ -51,7 +52,7 @@
         width: 120px;
 
         @media screen and (max-width: $breakpoint-sp) {
-            width: 80px;
+            width: 132px;
         }
     }
 
@@ -62,7 +63,7 @@
         letter-spacing: 0.05em;
 
         @media screen and (max-width: $breakpoint-sp) {
-            font-size: 24px;
+            font-size: 32px;
         }
     }
 
@@ -74,7 +75,11 @@
         padding: 0 20px;
         z-index: 2;
         margin-top: 180px;
+
         /* Bring above title bg if overlapping */
+        @media screen and (max-width: $breakpoint-sp) {
+            margin-top: 50px;
+        }
     }
 
     &__list {
@@ -86,6 +91,7 @@
             flex-direction: column;
             gap: 40px;
             align-items: center;
+            margin-top: -100px;
         }
     }
 
@@ -101,11 +107,11 @@
         padding: 40px;
 
         @media screen and (max-width: $breakpoint-sp) {
-            width: 100%;
-            height: auto;
-            aspect-ratio: 300 / 220;
-            /* Example ratio, adjust based on image */
-            padding: 30px;
+            width: 110vw;
+            margin-left: calc(50% - 55vw); // Centering a 120% wide element
+            height: 410px;
+            aspect-ratio: auto;
+            padding: 50px 15% 40px; // Increased side padding for wide bubble
         }
 
         &--01 {
@@ -113,6 +119,8 @@
 
             @media screen and (max-width: $breakpoint-sp) {
                 background-image: url("../images/voice-text01--sp.png");
+                background-size: cover;
+                background-position: top center;
             }
         }
 
@@ -124,11 +132,21 @@
             .voice__text {
                 margin-top: 100px;
                 margin-right: 30px;
+
                 /* Specific adjustment for item 02 */
+                @media screen and (max-width: $breakpoint-sp) {
+                    margin-top: 30px;
+                    margin-right: -30px;
+                }
             }
 
             @media screen and (max-width: $breakpoint-sp) {
                 background-image: url("../images/voice-text02--sp.png");
+                background-size: cover;
+                background-position: top left;
+                margin-left: calc(50% - 30vw); // Shifted further right
+                width: 369px;
+                height: 369px;
             }
         }
     }
@@ -143,7 +161,9 @@
         /* Adjust padding/margin to fit inside the bubble visually */
 
         @media screen and (max-width: $breakpoint-sp) {
-            font-size: 14px;
+            font-size: 20px;
+            margin-top: 40px;
+            text-align: center;
         }
     }
 
@@ -156,6 +176,9 @@
 
         @media screen and (max-width: $breakpoint-sp) {
             text-align: right;
+            margin-top: 20px;
+            font-size: 12px;
+            padding: 0 20px;
         }
     }
 
@@ -170,7 +193,7 @@
         @media screen and (max-width: $breakpoint-sp) {
             background-image: url("../images/last-bg--sp.png");
             padding: 80px 20px;
-            margin-top: 100px;
+            margin-top: 50px;
         }
     }
 
@@ -183,9 +206,9 @@
         letter-spacing: 0.05em;
 
         @media screen and (max-width: $breakpoint-sp) {
-            font-size: 16px;
+            font-size: 20px;
             line-height: 1.8;
-            text-align: left;
+            text-align: center;
             /* Or center depending on design */
         }
     }
