--- a/css/style.css
+++ b/css/style.css
@@ -221,6 +221,7 @@ a:hover {
   .header__logo img {
     width: auto;
     height: 40px;
+    display: none;
   }
 }
 @media screen and (max-width: 768px) {
@@ -245,12 +246,8 @@ a:hover {
     visibility: visible;
   }
 }
-.header__nav-box {
-  display: none;
-}
 @media screen and (max-width: 768px) {
   .header__nav-box {
-    display: block;
     background: url(../images/header__nav-bg.png) no-repeat center center;
     background-size: 100% 100%;
     width: 86%;
@@ -466,15 +463,16 @@ a:hover {
 @media screen and (max-width: 768px) {
   .mv__img--03 {
     width: 128%;
-    left: 0%;
-    max-width: 200%;
+    left: 50%;
+    margin-left: -64%;
+    max-width: none;
     bottom: 5%;
   }
 }
 .mv__img--04 {
   top: 266px;
-  right: -10%;
-  width: 10%;
+  right: 2%;
+  width: 20%;
   max-width: 450px;
   animation-name: slideInTopRight;
   animation-delay: 0.6s;
@@ -1523,6 +1521,7 @@ a:hover {
 @media screen and (max-width: 768px) {
   .flow {
     padding: 60px 0;
+    overflow: hidden;
   }
 }
 .flow__inner {
@@ -1973,7 +1972,7 @@ a:hover {
 }
 @media screen and (max-width: 768px) {
   .footer__title {
-    font-size: 20px;
+    font-size: 32px;
     margin-bottom: 40px;
   }
 }
@@ -1987,7 +1986,7 @@ a:hover {
 @media screen and (max-width: 768px) {
   .footer__row {
     flex-direction: column;
-    gap: 50px;
+    gap: 30px;
   }
 }
 .footer__col {
@@ -2010,6 +2009,11 @@ a:hover {
   /* Fixed width for logo column */
   flex-shrink: 0;
 }
+@media screen and (max-width: 768px) {
+  .footer__col:last-child {
+    width: 100%;
+  }
+}
 .footer__col:last-child .footer__sub-title {
   text-align: center;
 }
@@ -2019,6 +2023,11 @@ a:hover {
   font-weight: 500;
   letter-spacing: 0.05em;
 }
+@media screen and (max-width: 768px) {
+  .footer__sub-title {
+    font-size: 16px;
+  }
+}
 .footer__place-name {
   font-size: 32px;
   font-weight: 700;
@@ -2026,7 +2035,7 @@ a:hover {
 }
 @media screen and (max-width: 768px) {
   .footer__place-name {
-    font-size: 20px;
+    font-size: 24px;
   }
 }
 .footer__address {
@@ -2035,6 +2044,12 @@ a:hover {
   font-weight: 500;
   margin-bottom: 20px;
 }
+@media screen and (max-width: 768px) {
+  .footer__address {
+    font-size: 16px;
+    text-align: left;
+  }
+}
 .footer__company-logo {
   margin-bottom: 20px;
   background: #fff;
@@ -2042,6 +2057,11 @@ a:hover {
   display: inline-block;
   width: 400px;
   /* User request: 400px */
+}
+@media screen and (max-width: 768px) {
+  .footer__company-logo {
+    width: 100%;
+  }
 }
 .footer__company-logo img {
   width: 100%;
@@ -2794,6 +2814,7 @@ a:hover {
   .target__item--05 .target__text-box {
     transform: translate(-40%, 6%);
     height: auto;
+    width: 73%;
   }
 }
 .target__content {
@@ -3069,8 +3090,7 @@ a:hover {
 }
 @media screen and (max-width: 768px) {
   .qa__col {
-    width: 100%;
-    gap: 40px;
+    display: contents;
   }
 }
 .qa__col--left {
@@ -3102,7 +3122,24 @@ a:hover {
 @media screen and (max-width: 768px) {
   .qa__item {
     padding: 50px 30px 30px;
-    margin-bottom: 0px;
+    margin-bottom: 40px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .qa__col--left .qa__item:nth-child(1) {
+    order: 1;
+  }
+  .qa__col--right .qa__item:nth-child(1) {
+    order: 2;
+  }
+  .qa__col--left .qa__item:nth-child(2) {
+    order: 3;
+  }
+  .qa__col--right .qa__item:nth-child(2) {
+    order: 4;
+  }
+  .qa__col--right .qa__item:nth-child(3) {
+    order: 5;
   }
 }
 .qa__q-number {
@@ -3192,6 +3229,7 @@ a:hover {
 @media screen and (max-width: 768px) {
   .voice {
     padding-bottom: 60px;
+    overflow: hidden;
   }
 }
 .voice {
@@ -3213,8 +3251,8 @@ a:hover {
 }
 @media screen and (max-width: 768px) {
   .voice__title-area {
-    padding-top: 100px;
-    padding-bottom: 150px;
+    padding-top: 50px;
+    padding-bottom: 70px;
     background-size: cover;
   }
 }
@@ -3234,7 +3272,7 @@ a:hover {
 }
 @media screen and (max-width: 768px) {
   .voice__logo {
-    width: 80px;
+    width: 132px;
   }
 }
 .voice__title-text {
@@ -3245,7 +3283,7 @@ a:hover {
 }
 @media screen and (max-width: 768px) {
   .voice__title-text {
-    font-size: 24px;
+    font-size: 32px;
   }
 }
 .voice {
@@ -3260,6 +3298,11 @@ a:hover {
   margin-top: 180px;
   /* Bring above title bg if overlapping */
 }
+@media screen and (max-width: 768px) {
+  .voice__inner {
+    margin-top: 50px;
+  }
+}
 .voice__list {
   display: flex;
   justify-content: center;
@@ -3270,6 +3313,7 @@ a:hover {
     flex-direction: column;
     gap: 40px;
     align-items: center;
+    margin-top: -100px;
   }
 }
 .voice {
@@ -3287,11 +3331,11 @@ a:hover {
 }
 @media screen and (max-width: 768px) {
   .voice__item {
-    width: 100%;
-    height: auto;
-    aspect-ratio: 300/220;
-    /* Example ratio, adjust based on image */
-    padding: 30px;
+    width: 110vw;
+    margin-left: calc(50% - 55vw);
+    height: 410px;
+    aspect-ratio: auto;
+    padding: 50px 15% 40px;
   }
 }
 .voice__item--01 {
@@ -3300,6 +3344,8 @@ a:hover {
 @media screen and (max-width: 768px) {
   .voice__item--01 {
     background-image: url("../images/voice-text01--sp.png");
+    background-size: cover;
+    background-position: top center;
   }
 }
 .voice__item--02 {
@@ -3313,8 +3359,19 @@ a:hover {
   /* Specific adjustment for item 02 */
 }
 @media screen and (max-width: 768px) {
+  .voice__item--02 .voice__text {
+    margin-top: 30px;
+    margin-right: -30px;
+  }
+}
+@media screen and (max-width: 768px) {
   .voice__item--02 {
     background-image: url("../images/voice-text02--sp.png");
+    background-size: cover;
+    background-position: top left;
+    margin-left: calc(50% - 30vw);
+    width: 369px;
+    height: 369px;
   }
 }
 .voice__text {
@@ -3328,7 +3385,9 @@ a:hover {
 }
 @media screen and (max-width: 768px) {
   .voice__text {
-    font-size: 14px;
+    font-size: 20px;
+    margin-top: 40px;
+    text-align: center;
   }
 }
 .voice {
@@ -3343,6 +3402,9 @@ a:hover {
 @media screen and (max-width: 768px) {
   .voice__note {
     text-align: right;
+    margin-top: 20px;
+    font-size: 12px;
+    padding: 0 20px;
   }
 }
 .voice {
@@ -3359,7 +3421,7 @@ a:hover {
   .voice__last {
     background-image: url("../images/last-bg--sp.png");
     padding: 80px 20px;
-    margin-top: 100px;
+    margin-top: 50px;
   }
 }
 .voice__last-text {
@@ -3372,9 +3434,9 @@ a:hover {
 }
 @media screen and (max-width: 768px) {
   .voice__last-text {
-    font-size: 16px;
+    font-size: 20px;
     line-height: 1.8;
-    text-align: left;
+    text-align: center;
     /* Or center depending on design */
   }
 }
