--- a/css/style.css
+++ b/css/style.css
@@ -381,15 +381,15 @@ a:hover {
     background-color: #fff;
   }
   .header__hamburger.is-active span:nth-child(1) {
-    top: 0;
-    transform: none;
+    top: 50%;
+    transform: translateY(-50%) rotate(45deg);
   }
   .header__hamburger.is-active span:nth-child(2) {
-    opacity: 1;
+    opacity: 0;
   }
   .header__hamburger.is-active span:nth-child(3) {
-    bottom: 0;
-    transform: none;
+    bottom: 50%;
+    transform: translateY(50%) rotate(-45deg);
   }
 }
 
@@ -440,9 +440,9 @@ a:hover {
   animation-fill-mode: forwards;
 }
 .mv__img--01 {
-  top: 0;
+  top: -90px;
   left: -6%;
-  width: 26%;
+  width: 35%;
   animation-name: slideInTopLeft;
   animation-delay: 0.2s;
 }
@@ -470,9 +470,9 @@ a:hover {
   }
 }
 .mv__img--04 {
-  top: 266px;
-  right: 2%;
-  width: 20%;
+  top: -120px;
+  right: -5%;
+  width: 35%;
   max-width: 450px;
   animation-name: slideInTopRight;
   animation-delay: 0.6s;
@@ -489,7 +489,7 @@ a:hover {
   top: 50%;
   right: -30px;
   transform: translateY(-50%);
-  width: 7%;
+  width: 13%;
   max-width: 130px;
   animation-name: slideInRight;
   animation-delay: 0.8s;
@@ -1418,15 +1418,13 @@ a:hover {
     background-size: 100%;
   }
 }
-.feature__item--01 {
-  background-image: url(../images/feature-text01.png);
-  z-index: 1;
+.feature__item--01 .feature__item-title {
+  color: #fff;
 }
 @media screen and (max-width: 768px) {
   .feature__item--01 {
     background-image: url(../images/feature-text01--sp.png);
     text-align: center;
-    color: #fff;
     padding-bottom: 120px !important;
     height: 560px;
     min-height: 400px;
@@ -1436,7 +1434,7 @@ a:hover {
     margin-top: -30px;
   }
   .feature__item--01 .feature__item-title {
-    color: #fff;
+    color: #333;
     text-align: center;
     display: block;
   }
@@ -1460,7 +1458,9 @@ a:hover {
   background-image: url(../images/feature-text03.png);
   z-index: 1;
   width: 460px;
-  height: 640px;
+}
+.feature__item--03 .feature__item-title {
+  color: #fff;
 }
 @media screen and (max-width: 768px) {
   .feature__item--03 {
@@ -1470,6 +1470,9 @@ a:hover {
   }
   .feature__item--03 .feature__item-content {
     margin-top: -30px;
+  }
+  .feature__item--03 .feature__item-title {
+    color: #333;
   }
 }
 @media screen and (max-width: 768px) {
@@ -3268,7 +3271,7 @@ a:hover {
   }
 }
 .voice__logo {
-  width: 120px;
+  width: 206px;
 }
 @media screen and (max-width: 768px) {
   .voice__logo {
@@ -3277,7 +3280,7 @@ a:hover {
 }
 .voice__title-text {
   font-family: "Kiwi Maru", "Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif;
-  font-size: 40px;
+  font-size: 48px;
   font-weight: 500;
   letter-spacing: 0.05em;
 }
@@ -3451,7 +3454,7 @@ a:hover {
 }
 .pickup__inner {
   width: 100%;
-  max-width: 1200px;
+  max-width: 900px;
   /* User request: Slider itself 1200px */
   margin: 0 auto;
   position: relative;
@@ -3543,7 +3546,7 @@ a:hover {
 /* Float Button */
 .float-btn {
   position: fixed;
-  top: 120px;
+  top: 90px;
   right: 24px;
   width: 220px;
   height: 220px;
@@ -3613,6 +3616,12 @@ a:hover {
   .float-btn__sub {
     font-size: 11px;
   }
+}
+.float-btn.is-hidden {
+  opacity: 0 !important;
+  visibility: hidden !important;
+  pointer-events: none !important;
+  transition: opacity 0.3s;
 }
 
 @keyframes floatBubble {
