--- a/css/modules/_flow.scss
+++ b/css/modules/_flow.scss
@@ -5,6 +5,7 @@
     @media screen and (max-width: $breakpoint-sp) {
         padding: 60px 0;
         overflow: hidden;
+        margin-top: 80px;
     }
 
     &__inner {
