--- a/css/modules/_mv.scss
+++ b/css/modules/_mv.scss
@@ -14,13 +14,15 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        width: 100%;
-        height: 100%;
-        min-width: 1280px; // Prevent overlap on narrow width
-        min-height: 800px; // Prevent overlap on short height
+        width: 1280px;
+        height: 800px;
+        // min-width: 1280px; // Removed as we are setting fixed size
+        // min-height: 800px; // Removed as we are setting fixed size
         z-index: 0;
 
         @media screen and (max-width: $breakpoint-sp) {
+            width: 100%;
+            height: 100%;
             min-width: 100%;
             min-height: 100%;
         }
