--- a/css/modules/_schedule.scss
+++ b/css/modules/_schedule.scss
@@ -50,6 +50,7 @@
             top: -10px;
             right: -20px;
             left: auto;
+            display: none;
             transform: rotate(-10deg);
             width: 130px;
             margin: 0;
