--- a/css/style.css
+++ b/css/style.css
@@ -409,14 +409,14 @@ a:hover {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 100%;
-  height: 100%;
-  min-width: 1280px;
-  min-height: 800px;
+  width: 1280px;
+  height: 800px;
   z-index: 0;
 }
 @media screen and (max-width: 768px) {
   .mv__bg {
+    width: 100%;
+    height: 100%;
     min-width: 100%;
     min-height: 100%;
   }
@@ -1777,6 +1777,7 @@ a:hover {
     top: -10px;
     right: -20px;
     left: auto;
+    display: none;
     transform: rotate(-10deg);
     width: 130px;
     margin: 0;
