--- a/css/modules/_schedule.scss
+++ b/css/modules/_schedule.scss
@@ -54,7 +54,7 @@
             transform: rotate(-10deg);
             width: 130px;
             margin: 0;
-            display: block; // Re-enable and reposition
+            display: none; // Re-enable and reposition
             opacity: 0.8;
         }
     }
