--- a/css/modules/_feature.scss
+++ b/css/modules/_feature.scss
@@ -148,6 +148,9 @@
         }
 
         &--01 {
+            background-image: url(../images/feature-text01.png);
+            z-index: 1;
+
             .feature__item-title {
                 color: #fff;
             }
